Add company request approval and editing endpoints
Introduces endpoints for updating, approving, and rejecting company requests with user role validation. Refactors CompanyRequestService to support these operations, adds Feign client for company creation, and improves validation logic. Also updates password validation in UserService and adds inspection profile for custom HTTP header.